[package]
name = "practice_yahoo_finance_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
# yahoo_finance_api = { "version" = "1.0", features = ["blocking"] }
# yahoo_finance_api = { "version" = "1.0" }
yahoo_finance_api = { "path" = "./yahoo_finance_api/" }
